workable solution for 4